# py-benchmark-functions

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pr-tests.yaml
examples/: intro.ipynb
py_benchmark_functions/: __init__.py
py_benchmark_functions/core/: __init__.py  function.py  metadata.py  transformation.py
py_benchmark_functions/factory/: __init__.py  builder.py  registry.py
py_benchmark_functions/imp/: numpy.py  tensorflow.py  torch.py
py_benchmark_functions/info/: __init__.py
py_benchmark_functions/plot/: drawer.py
tests/: test_numpy_functions.py  test_sample_evaluations.py  test_tensorflow_functions.py  utils.py
